<resources>
	<string name="app_name">明溪天气</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<string name="action_settings">Settings</string>
	<string name="action_search">Search</string>

	<string name="read_external_storage_permission_denied">无法获取读取外部存储的权限，程序可能无法正常使用。</string>
	<string name="write_external_storage_permission_denied">无法获取写入外部存储的权限，程序可能无法正常使用。</string>
	<string name="read_and_write_external_storage_permission_denied">无法获取读写外部存储的权限，程序可能无法使用。</string>

	<string name="default_temperature">0</string>
	<string name="default_weather">天气</string>

	<string name="tips">提示</string>
	<string name="loading">正在加载数据</string>
	<string name="load_failed">加载数据失败</string>

	<string name="incorrect_city">查询的是不存在的城市/地点</string>
	<string name="cannot_get_data_from_network">不能从网络下载数据，请检查您的网络连接。</string>
	<string name="incorrect_json">获取的JSON格式不正确</string>
	<string name="add_city">添加城市</string>
	<string name="remove_city">删除城市</string>
	<string name="manage_city">管理已选城市</string>
	<string name="setting">设置</string>
	<string name="cities">城市</string>
	<string name="attractions">景点</string>
	<string name="search_hint">搜索</string>

	<string name="tmp">°</string>
	<string name="humidity">相对湿度%1$s</string>
	<string name="wind">%1$s级</string>
	<string name="visibility">能见度%1$sKM</string>
	<string name="aqi">%1$s 空气质量%2$s</string>
	<string name="not_aqi">无法获取空气质量</string>

	<string name="hourly_weather">分时天气</string>
	<string name="pop">降水概率:</string>
	<string name="day_weather">白天天气情况：</string>
	<string name="night_weather">夜晚天气情况：</string>

	<string name="suggestion_comfort">舒适度</string>
	<string name="suggestion_dress">穿衣指数</string>
	<string name="suggestion_uv">紫外线指数</string>
	<string name="suggestion_cw">洗车指数</string>
	<string name="suggestion_fluent">感冒指数</string>
	<string name="suggestion_sport">运动指数</string>
	<string name="suggestion_travel">旅游指数</string>

	<string name="widget_preferences">桌面Widget更新间隔</string>
	<string name="chose_interval">选择间隔</string>
	<string name="thirty_minute">30分钟</string>
	<string name="an_hour">1小时</string>
	<string name="two_hour">2小时</string>
	<string name="four_hour">4小时</string>
	<string name="six_hour">6小时</string>
	<string name="twelve_hour">12小时</string>
	<string name="a_day">1天</string>

	<string name="weather_in_seven_days">天气预报展示方式</string>
	<string name="show_bessel">曲线图</string>
	<string name="show_line">折线图</string>
</resources>
