<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
	android:id="@+id/refresh_layout"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<android.support.v7.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/middle_margin"
				app:cardCornerRadius="@dimen/card_radius">

				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<RelativeLayout
						android:id="@+id/weather_content"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentEnd="true"
						android:layout_alignParentRight="true"
						android:layout_marginEnd="@dimen/middle_margin"
						android:layout_marginRight="@dimen/middle_margin"
						android:layout_marginTop="@dimen/small_margin">

						<ImageView
							android:id="@+id/weather_icon"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_centerVertical="true"
							android:src="@mipmap/ic_launcher"/>

						<TextView
							android:id="@+id/weather_desc"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_centerVertical="true"
							android:layout_toEndOf="@id/weather_icon"
							android:layout_toRightOf="@id/weather_icon"
							android:textSize="@dimen/large_txt_size"
							android:text="@string/default_weather"/>

					</RelativeLayout>

					<TextView
						android:id="@+id/temperature"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_below="@id/weather_content"
						android:background="@null"
						android:fontFamily="sans-serif-thin"
						android:gravity="center_horizontal"
						android:includeFontPadding="false"
						android:text="@string/default_temperature"
						android:textSize="@dimen/temperature_size"/>

					<TextView
						android:id="@+id/aqi"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_below="@id/temperature"
						android:layout_centerHorizontal="true"
						android:background="@drawable/txt_bkg"
						android:paddingBottom="@dimen/small_padding"
						android:paddingEnd="@dimen/middle_padding"
						android:paddingLeft="@dimen/middle_padding"
						android:paddingRight="@dimen/middle_padding"
						android:paddingStart="@dimen/middle_padding"
						android:paddingTop="@dimen/small_padding"/>

					<LinearLayout
						android:id="@+id/some_info_content"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_below="@id/aqi">

						<TextView
							android:id="@+id/humidity"
							android:layout_width="0dp"
							android:layout_height="match_parent"
							android:layout_weight="1"
							android:gravity="center"
							android:padding="@dimen/small_padding"
							android:textColor="@color/light_green_700"/>

						<TextView
							android:id="@+id/wind"
							android:layout_width="0dp"
							android:layout_height="match_parent"
							android:layout_weight="1"
							android:gravity="center"
							android:padding="@dimen/small_padding"
							android:textColor="@color/light_green_700"/>

						<TextView
							android:id="@+id/visibility"
							android:layout_width="0dp"
							android:layout_height="match_parent"
							android:layout_weight="1"
							android:gravity="center"
							android:padding="@dimen/small_padding"
							android:textColor="@color/light_green_700"/>
					</LinearLayout>
				</RelativeLayout>
			</android.support.v7.widget.CardView>

			<android.support.v7.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/middle_margin"
				android:layout_marginEnd="@dimen/middle_margin"
				android:layout_marginLeft="@dimen/middle_margin"
				android:layout_marginRight="@dimen/middle_margin"
				android:layout_marginStart="@dimen/middle_margin"
				android:visibility="gone"
				app:cardCornerRadius="@dimen/card_radius">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="@dimen/middle_padding"
						android:text="@string/hourly_weather"
						android:textColor="@color/light_green_700"
						android:textSize="@dimen/large_txt_size"/>

					<com.mx.dxinl.mvp_mxweather.vus.view.HourlyWeatherView
						android:id="@+id/hourly_weather"
						android:layout_width="match_parent"
						android:layout_height="match_parent"/>

				</LinearLayout>
			</android.support.v7.widget.CardView>

			<android.support.v7.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/middle_margin"
				android:layout_marginEnd="@dimen/middle_margin"
				android:layout_marginLeft="@dimen/middle_margin"
				android:layout_marginRight="@dimen/middle_margin"
				android:layout_marginStart="@dimen/middle_margin"
				app:cardCornerRadius="@dimen/card_radius">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">

					<com.mx.dxinl.mvp_mxweather.vus.view.DailyTemperatureView
						android:id="@+id/daily_tmp_weather"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:paddingEnd="@dimen/middle_padding"
						android:paddingLeft="@dimen/middle_padding"
						android:paddingRight="@dimen/middle_padding"
						android:paddingStart="@dimen/middle_padding"
						android:text="@string/day_weather"
						android:textColor="@color/light_green_700"
						android:textSize="@dimen/normal_txt_size"/>

					<FrameLayout
						android:id="@+id/day_weather"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:paddingEnd="@dimen/middle_padding"
						android:paddingLeft="@dimen/middle_padding"
						android:paddingRight="@dimen/middle_padding"
						android:paddingStart="@dimen/middle_padding"
						android:text="@string/night_weather"
						android:textColor="@color/light_green_700"
						android:textSize="@dimen/normal_txt_size"/>

					<FrameLayout
						android:id="@+id/night_weather"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"/>

				</LinearLayout>
			</android.support.v7.widget.CardView>

			<android.support.v7.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/middle_margin"
				android:layout_marginEnd="@dimen/middle_margin"
				android:layout_marginLeft="@dimen/middle_margin"
				android:layout_marginRight="@dimen/middle_margin"
				android:layout_marginStart="@dimen/middle_margin"
				app:cardCornerRadius="@dimen/card_radius">

				<!--
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">

					<TextView
						android:id="@+id/drsg"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="@dimen/middle_margin"
						android:paddingEnd="@dimen/small_padding"
						android:paddingLeft="@dimen/small_padding"
						android:paddingRight="@dimen/small_padding"
						android:paddingStart="@dimen/small_padding"
						android:textSize="@dimen/large_txt_size"/>

					<TextView
						android:id="@+id/drsg_txt"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginBottom="@dimen/middle_margin"
						android:paddingEnd="@dimen/middle_padding"
						android:paddingLeft="@dimen/middle_padding"
						android:paddingRight="@dimen/middle_padding"
						android:paddingStart="@dimen/middle_padding"
						android:textSize="@dimen/normal_txt_size"/>

					<TextView
						android:id="@+id/flu"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:paddingEnd="@dimen/small_padding"
						android:paddingLeft="@dimen/small_padding"
						android:paddingRight="@dimen/small_padding"
						android:paddingStart="@dimen/small_padding"
						android:textSize="@dimen/large_txt_size"/>

					<TextView
						android:id="@+id/flu_txt"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginBottom="@dimen/middle_margin"
						android:paddingEnd="@dimen/middle_padding"
						android:paddingLeft="@dimen/middle_padding"
						android:paddingRight="@dimen/middle_padding"
						android:paddingStart="@dimen/middle_padding"
						android:textSize="@dimen/normal_txt_size"/>

					<TextView
						android:id="@+id/sport"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:paddingEnd="@dimen/small_padding"
						android:paddingLeft="@dimen/small_padding"
						android:paddingRight="@dimen/small_padding"
						android:paddingStart="@dimen/small_padding"
						android:textSize="@dimen/large_txt_size"/>

					<TextView
						android:id="@+id/sport_txt"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginBottom="@dimen/middle_margin"
						android:paddingEnd="@dimen/middle_padding"
						android:paddingLeft="@dimen/middle_padding"
						android:paddingRight="@dimen/middle_padding"
						android:paddingStart="@dimen/middle_padding"
						android:textSize="@dimen/normal_txt_size"/>

					<TextView
						android:id="@+id/uv"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:paddingEnd="@dimen/small_padding"
						android:paddingLeft="@dimen/small_padding"
						android:paddingRight="@dimen/small_padding"
						android:paddingStart="@dimen/small_padding"
						android:textSize="@dimen/large_txt_size"/>

					<TextView
						android:id="@+id/uv_txt"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginBottom="@dimen/middle_margin"
						android:paddingEnd="@dimen/middle_padding"
						android:paddingLeft="@dimen/middle_padding"
						android:paddingRight="@dimen/middle_padding"
						android:paddingStart="@dimen/middle_padding"
						android:textSize="@dimen/normal_txt_size"/>

					<TextView
						android:id="@+id/trav"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:paddingEnd="@dimen/small_padding"
						android:paddingLeft="@dimen/small_padding"
						android:paddingRight="@dimen/small_padding"
						android:paddingStart="@dimen/small_padding"
						android:textSize="@dimen/large_txt_size"/>

					<TextView
						android:id="@+id/trav_txt"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginBottom="@dimen/middle_margin"
						android:paddingEnd="@dimen/middle_padding"
						android:paddingLeft="@dimen/middle_padding"
						android:paddingRight="@dimen/middle_padding"
						android:paddingStart="@dimen/middle_padding"
						android:textSize="@dimen/normal_txt_size"/>

					<TextView
						android:id="@+id/cw"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:paddingEnd="@dimen/small_padding"
						android:paddingLeft="@dimen/small_padding"
						android:paddingRight="@dimen/small_padding"
						android:paddingStart="@dimen/small_padding"
						android:textSize="@dimen/large_txt_size"/>

					<TextView
						android:id="@+id/cw_txt"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginBottom="@dimen/middle_margin"
						android:paddingEnd="@dimen/middle_padding"
						android:paddingLeft="@dimen/middle_padding"
						android:paddingRight="@dimen/middle_padding"
						android:paddingStart="@dimen/middle_padding"
						android:textSize="@dimen/normal_txt_size"/>
				</LinearLayout>
				-->

				<FrameLayout
					android:id="@+id/suggestion"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"/>

			</android.support.v7.widget.CardView>
		</LinearLayout>

	</ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>